proyecto-compensations/force-app/main/default/objects/Compensation__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MVD WTC 2</fullName>
            </value>
            <value>
                <fullName>MVD WTC 1</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>