proyecto-compensations/force-app/main/default/objects/Compensation__c/fields/Other_details__c.field-meta.xml
<CustomField>
    <fullName>Other_details__c</fullName>
    <label>Other details</label>
    <type>TextArea</type>
</CustomField>