proyecto-compensations/force-app/main/default/objects/Compensation__c/recordTypes/Salary.recordType-meta.xml
<RecordType>
    <fullName>Salary</fullName>
    <active>true</active>
    <label>Salary</label>
</RecordType>