proyecto-compensations/force-app/main/default/objects/Compensation__c/validationRules/Field_filled_and_other_not_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_filled_and_other_not_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Job_Category__c) &lt;&gt;  &quot;OTHER&quot;, NOT(ISBLANK(Other_details__c)))</errorConditionFormula>
    <errorMessage>&quot;Other details&quot; field should not contain information about other job category if it is not selected</errorMessage>
</ValidationRule>