proyecto-compensations/force-app/main/default/objects/Compensation__c/validationRules/Other_selected_and_field_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_selected_and_field_empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Job_Category__c)= &quot;OTHER&quot;, ISBLANK(Other_details__c))</errorConditionFormula>
    <errorMessage>&quot;Other details&quot; field must contain information about other job category</errorMessage>
</ValidationRule>