proyecto-compensations/force-app/main/default/objects/Compensation__c/validationRules/Over_5000.validationRule-meta.xml
<ValidationRule>
    <fullName>Over_5000</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c  &gt; 5000</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount can&#39;t be over $5,000</errorMessage>
</ValidationRule>